# VMSToolAccess

./: .gitignore  README.md  package-lock.json  package.json  stage.bat  vue.config.js
Dispenser/: CMakeLists.txt  Makefile
Dispenser/main/: CMakeLists.txt  Config.cpp  Config.h  HID.cpp  HID.h  MFRC522.cpp  MFRC522.h  SPI.cpp  SPI.h  WebApi.cpp  WebApi.h  WiFi.cpp  app_main.c  ca_pem.h  main.cpp  nvs.csv
UserPortal/: forge.config.js  package.json  requirements.txt  sendToPi.cmd  simDoor.cmd  simTool.cmd
UserPortal/ESP32CardReader/: CMakeLists.txt
UserPortal/deploy/: bundle.ps1  deploy.sh  install.sh  toolaccess-kiosk-server.service  toolaccess-kiosk.service
UserPortal/electron/: kioskServer.js  kiosk_server.py  main.js  preload.js  server.py
UserPortal/flutter_ui/: pubspec.yaml
firmware/: CMakeLists.txt  burnSettings.cmd  burnsettings.sh  sdkconfig  sdkconfig.old
firmware/main/: CMakeLists.txt  Config.cpp  Config.h  MFRC522.cpp  SPI.cpp  SemaphoreLock.h  SpindleTime.cpp  SpindleTime.h  WS2812.cpp  WebApi.cpp  WebApi.h  WiFi.cpp  WiFi.h  ca_pem.h  idf_component.yml  main.cpp  nvs.csv
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  types.ts
server/: drizzle.config.ts  package-lock.json  package.json  server.key  server.pem  tsconfig.json  webpack.config.js
server/@types/: decl.d.ts  index.d.ts  index.d.ts.bak
src/: AddEditTool.vue  App.vue  EditToolUsers.vue  Login.vue  Settings.vue  Stats.vue  TempApp.vue  Test.vue  ToolCard.vue  ToolLog.vue  ToolUtilChart.vue  Tools.vue  Users.vue  main.js
(+93 files in other folders)
